syntax = "proto3";

package proto;

message HelloWorldRequest {
    string message = 1;
}