syntax = "proto3";

import "helloWorld.proto";

package proto;

service HelloWorldService {
  rpc helloWorld(HelloWorldRequest) returns (HelloWorldResponse) {}
}

message HelloWorldResponse {
  string response = 1;
}